--- a/links.yml
+++ b/links.yml
@@ -3,9 +3,9 @@
 ## 友情链接页面配置
 ################
 # 网站标题
-title: GenEasy
+title: CatFans导航
 # 网站 LOGO（可选）
-# logo: https://webstack.cc/assets/images/logo@2x.png
+# logo: https://catfans.club/assets/logo.png
 # 友情链接页面关键字（可选）
 keywords: 友情链接, GenEasy, Github, Github Pages, SSG
 # 友情链接描述（可选）
